--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -26,17 +26,29 @@
         <version>6.3.1.Final</version>
       </dependency>
 
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.5.6</version>
-		</dependency>
+      <dependency>
+			  <groupId>org.glassfish</groupId>
+			  <artifactId>jakarta.el</artifactId>
+			  <version>4.0.2</version>
+		  </dependency>
+
+      <dependency>
+			  <groupId>org.hibernate.validator</groupId>
+			  <artifactId>hibernate-validator</artifactId>
+			  <version>8.0.1.Final</version>
+		  </dependency>
+
+		  <dependency>
+			  <groupId>ch.qos.logback</groupId>
+			  <artifactId>logback-classic</artifactId>
+			  <version>1.5.6</version>
+		  </dependency>
 <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
-<dependency>
-    <groupId>com.oracle.database.jdbc</groupId>
-    <artifactId>ojdbc11</artifactId>
-    <version>23.7.0.25.01</version>
-</dependency>
+      <dependency>
+          <groupId>com.oracle.database.jdbc</groupId>
+          <artifactId>ojdbc11</artifactId>
+          <version>23.7.0.25.01</version>
+      </dependency>
 
 	</dependencies>
 </project>
